<resources>
    <!--App清单-->
    <string name="app_name">BookStore</string>

    <!--登录页面-->
    <string name="login_signIn">登录</string>
    <string name="login_signUp">注册</string>
    <string name="login_hint_account">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_remember">记住密码</string>

    <!--注册页面-->
    <string name="register_submit">提交</string>
    <string name="register_back">返回</string>
    <string name="register_email">请输入电子邮箱</string>

    <!--管理页面-->
    <string name="management_book">书籍管理</string>
    <string name="management_personal">个人中心</string>
    <string name="management_message">消息管理</string>
    <string name="management_bookLend">借书申请管理</string>

    <!--个人中心-->
    <string name="personal_change_btn">修改个人信息</string>

    <!--修改个人信息页面-->
    <string name="changeInfo_submit">提交</string>

    <!--书籍管理页面-->
    <string name="banner_isSelected">轮播</string>
    <string name="banner_isRecommend">推荐</string>
    <string name="banner_bookAdd">添加书籍</string>
    <string name="banner_bookListAdd">添加书籍列表</string>

    <!--添加书籍种类页面-->
    <string name="add_bookList_name">请输入书籍种类名称</string>
    <string name="add_bookList_id">请输入书籍种类ID(1~999)</string>
    <string name="add_bookList_add">添加</string>

    <!--添加书籍页面-->
    <string name="add_book_name">请输入书籍名称</string>
    <string name="add_book_abstract">请输入书籍摘要</string>
    <string name="add_book_content">请输入书籍内容</string>
    <string name="add_book_imageURL">请输入书籍图片URL</string>
    <string name="add_book_category">请选择所属书籍种类</string>
    <string name="add_book_add">添加</string>

    <!--消息管理页面-->
    <string name="message_edit">编辑</string>
    <string name="message_delete">删除</string>

    <!--消息栏菜单-->
    <string name="add_message">添加消息</string>

    <!--添加消息页面-->
    <string name="add_message_addBtn">提交</string>
    <string name="add_message_title">请输入消息标题</string>
    <string name="add_message_content">请输入消息内容</string>

    <!--消息列表-->
    <string name="message_item_title">暂无系统消息</string>
    <string name="message_item_content">暂无消息内容,请等待添加!</string>
</resources>

