<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddBookActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_book_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorBlue_Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/add_book_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/add_book_name"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/add_book_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />
    <EditText
        android:id="@+id/add_book_abstract"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_abstract"
        android:inputType="textMultiLine"
        android:maxLines="4"
        app:layout_constraintTop_toBottomOf="@id/add_book_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/add_book_imgUrl"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/add_book_imageURL"
        app:layout_constraintTop_toBottomOf="@id/add_book_abstract"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/add_book_category"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/add_book_imgUrl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/add_book_content"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_content"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:maxLines="8"
        app:layout_constraintTop_toBottomOf="@id/add_book_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.allen.library.SuperButton
        android:id="@+id/add_book_addBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:sCornersRadius="100dp"
        android:text="@string/add_book_add"
        android:textColor="@color/white"
        app:sSolidColor="@color/colorBlue_Light"
        app:sStrokeWidth="2dp"
        app:sStrokeColor="@color/bootstrap_edittext_disabled"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toBottomOf="@id/add_book_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>