<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:id="@+id/register_account"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/login_hint_account"
        android:drawableLeft="@drawable/ic_account_box"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_account"
        app:layout_constraintLeft_toLeftOf="@id/register_account"
        app:layout_constraintRight_toRightOf="@id/register_account"/>

    <EditText
        android:id="@+id/register_password_repeat"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintLeft_toLeftOf="@id/register_password"
        app:layout_constraintRight_toRightOf="@id/register_password"
        />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_email"

        android:hint="@string/register_email"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_password_repeat"
        app:layout_constraintLeft_toLeftOf="@id/register_password_repeat"
        app:layout_constraintRight_toRightOf="@id/register_password_repeat"
        />
    <com.allen.library.SuperButton
        android:id="@+id/register_submit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/register_submit"
        app:sCornersRadius="20dp"
        android:textColor="@color/white"
        app:sSolidColor="@color/DimGray"

        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_repeat"
        app:layout_constraintLeft_toLeftOf="@id/register_password_repeat"
        app:layout_constraintRight_toRightOf="@id/register_password_repeat"/>

    <com.allen.library.SuperButton
        android:id="@+id/register_back"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/register_back"
        app:sCornersRadius="20dp"
        android:textColor="@color/white"
        app:sSolidColor="@color/DimGray"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_submit"
        app:layout_constraintLeft_toLeftOf="@id/register_submit"
        app:layout_constraintRight_toRightOf="@id/register_submit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>