<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddMessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_message_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorBlue_Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/add_message_title"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:hint="@string/add_message_title"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/add_message_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/add_message_content"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:hint="@string/add_message_content"
        android:gravity="top|start"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        app:layout_constraintTop_toBottomOf="@id/add_message_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.allen.library.SuperButton
        android:id="@+id/add_message_submit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:sCornersRadius="100dp"
        android:text="@string/add_message_addBtn"
        android:textColor="@color/white"
        app:sSolidColor="@color/colorBlue_Light"
        app:sStrokeWidth="2dp"
        app:sStrokeColor="@color/bootstrap_edittext_disabled"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toBottomOf="@id/add_message_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>